--- a/src/pages/layout/style.less
+++ b/src/pages/layout/style.less
@@ -1,28 +1,32 @@
 :root {
-    --white: #fff;
-  }
-  .header {
-    padding: 0 20px 0 24px;
-    background-color: var(--white);
-    display: flex;
-    justify-content: space-between;
-    height: 60px;
-    box-shadow: 0px 3px 6px 0px rgba(218, 218, 218, 0.6);
-    margin-bottom: 4px;
-    .title {
-      margin: 0;
-      display: flex;
-      align-items: center;
-      color: #00508e;
-      font-size: 24px;
-    }
-  }
-
-  .footer {
-    height: 64px;
-    color: #000;
+  --white: #fff;
+}
+.header {
+  padding: 0 20px 0 24px;
+  background-color: var(--white);
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+  box-shadow: 0px 3px 6px 0px rgba(218, 218, 218, 0.6);
+  margin-bottom: 4px;
+  .title {
+    margin: 0;
     display: flex;
     align-items: center;
-    justify-content: center;
-    font-size: 18px;
+    color: #00508e;
+    font-size: 24px;
   }
+}
+.sidebar {
+  .ant-menu {
+    height: 100%;
+  }
+}
+.footer {
+  height: 64px;
+  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+}
